@@ -1,3 +1,15 @@
+2014-09-22  Filip Pizlo  <fpizlo@apple.com>
+
+        FTL allocatePropertyStorage code should involve less copy-paste
+        https://bugs.webkit.org/show_bug.cgi?id=137006
+
+        Reviewed by Michael Saboff.
+
+        * ftl/FTLLowerDFGToLLVM.cpp:
+        (JSC::FTL::LowerDFGToLLVM::allocatePropertyStorage):
+        (JSC::FTL::LowerDFGToLLVM::reallocatePropertyStorage):
+        (JSC::FTL::LowerDFGToLLVM::allocatePropertyStorageWithSizeImpl):
+
 2014-09-22  Diego Pino Garcia  <dpino@igalia.com>
 
         Simple ES6 feature: Number constructor extras
